force-app/main/default/objects/Usage__c/Usage__c.object-meta.xml
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>USG-{0000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>