force-app/main/default/objects/Usage__c/fields/BillingPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodEnd__c</fullName>
    <label>Billing Period End</label>
    <type>Date</type>
</CustomField>