force-app/main/default/objects/Usage__c/fields/BillingPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodStart__c</fullName>
    <label>Billing Period Start</label>
    <type>Date</type>
</CustomField>