force-app/main/default/objects/Usage__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Usage Records</relationshipLabel>
    <relationshipName>UsageRecords</relationshipName>
    <type>Lookup</type>
</CustomField>