force-app/main/default/objects/Usage__c/fields/Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>Usage_Date__c</fullName>
    <label>Usage Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>